# simulate_2048

./: .gitignore  LICENSE  Makefile  README.md  dummy_runs.py  evaluate.py  manuals_control.py  pylintrc  pyproject.toml  requirements.txt  runs.py  setup.cfg  setup.py  steup.cfg
.github/workflows/: pre-commit.yml  unittest.yml
alphazero/: eval.py  train.py
alphazero/addons/: config.py  simulator.py  types.py
alphazero/game/: config.py  environment.py  game.py  simulator.py
alphazero/models/: core.py  network.py
alphazero/module/: actor.py  helpers.py  learner.py  replay.py
alphazero/search/: helpers.py  mcts.py  node.py
alphazero/train/: self_play.py  training.py
alphazero/training/: core.py
docs/: project.md
dqn/: agent.py  train.py
monte_carlo/: __init__.py  actor.py  node.py  search.py
muzero/: evaluate.py
muzero/addons/: __init__.py  config.py  types.py
muzero/models/: __init__.py  network.py
muzero/module/: __init__.py  actor.py  learner.py  replay.py
muzero/search/: __init__.py  helpers.py  mcts.py  node.py
neurals/: __init__.py  models.py  network.py
notebooks/: test_network.ipynb  test_self_play.ipynb  test_simulate.ipynb  train_kaggle.ipynb  visualize.ipynb  visualize_model.ipynb  visualize_trees.ipynb
ppo/: agent.py  train.py
reinforce/: __init__.py  eval.py  evaluate.py  train.py
reinforce/actor/: a2c_actor.py  actor.py
reinforce/addons/: __init__.py  config.py  optimizer.py  optimizers.py  replay.py  types.py
reinforce/algo/: a2c_model.py
reinforce/game/: __init__.py  config.py  core.py  env.py  environment.py  game.py  simulator.py
reinforce/learner/: a2c_learner.py  learner.py
reinforce/mcts/: __init__.py  actor.py  batched_agent.py  batched_search.py  network_search.py  node.py  parallel_search.py  policy.py  search.py  stochastic_agent.py  stochastic_mctx.py
reinforce/models/: __init__.py  a2cmodel.py  core.py  network.py  ppomodel.py  qmodel.py
reinforce/module/: __init__.py  a2cagent.py  actor.py  agent.py  core.py  ppoagent.py  q_learn.py  qactor.py  qlearn.py  replay.py
reinforce/network/: actor_critic.py  cacher.py  core.py
reinforce/neural/: __init__.py  accelerator.py  models.py  network.py
reinforce/replay/: experience_replay.py  replay.py
reinforce/search/: mcts.py  node.py
reinforce/train/: self_play.py  training.py
reinforce/training/: __init__.py  a2ctrain.py  config.py  core.py  learner.py  losses.py  ppotraining.py  qtrain.py  replay_buffer.py  self_play.py  targets.py  trainer.py
replay/: __init__.py  advantage_buffer.py  buffer.py  prioritized.py  prioritized_buffer.py  sum_tree.py  uniform.py  uniform_buffer.py
scripts/: benchmark_training.py  profile_mcts.py
simulate/: __init__.py
simulate/envs/: __init__.py  gameboard.py  twentyfortyeight.py  utils.py
simulate/utils/: __init__.py  gameboard.py  gamemove.py  windows.py
simulate/wrappers/: __init__.py  binary.py  encoded.py  normalize.py
simulate_2048/: __init__.py
simulate_2048/envs/: __init__.py  gameboard.py  utils.py
simulate_2048/utils/: __init__.py  windows.py
simulate_2048/wrappers/: __init__.py  encoded_observation.py  observation_wrappers.py
tests/: test_batched_mcts.py  test_board.py  test_encoded.py  test_environment.py  test_jax_game.py  test_mcts_agent.py  test_mcts_nodes.py  test_mcts_search.py  test_move.py  test_network_mcts.py  test_neural.py  test_obs_wrapper.py  test_parallel_mcts.py  test_perf_utils.py
twentyfortyeight/core/: __init__.py  gameboard.py  gamemove.py
twentyfortyeight/envs/: __init__.py  twentyfortyeight.py
twentyfortyeight/utils/: __init__.py  binary.py  normalize.py  windows.py
twentyfortyeight/wrappers/: __init__.py  encoded.py
