[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulate-2048"
version = "0.1.0"
description = "Explore reinforcement learning with 2048 Game"
authors = [{ name = "Kone Abdallah Hakim", email = "konehakim@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.0",
    "tqdm>=4.66.5",
    "jupyterlab>=4.2.4",
    "notebook>=7.2.1",
    "networkx>=3.3",
    "mpld3>=0.5.10",
    "matplotlib>=3.8",
    "keras>=3.5.0",
    "tensorflow>=2.17.0,<2.19",
    "pydot>=3.0.1",
    "gymnasium>=0.29.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyrefly>=0.16.0",
    "pytest>=8.0",
    "tensorflow-metal>=1.2.0; sys_platform == 'darwin'",
    "vulture>=2.14",
]

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PLC0415",  # import-outside-top-level
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["twentyfortyeight", "reinforce"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyrefly]
project_includes = ["twentyfortyeight", "reinforce", "tests"]
python_version = "3.12"

[tool.hatch.build.targets.wheel]
packages = ["twentyfortyeight", "reinforce"]
