[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulate-2048"
version = "0.1.0"
description = "Explore reinforcement learning with 2048 Game"
authors = [{ name = "Kone Abdallah Hakim", email = "konehakim@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0,<3.0",
    "tqdm>=4.66.5",
    # JAX ecosystem for GPU-accelerated MCTS and training
    "jax>=0.4.30",
    "jaxlib>=0.4.26",
    # "jax-metal>=0.1.0; sys_platform == 'darwin'",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "mctx>=0.0.5",
    "chex>=0.1.86",
    "orbax-checkpoint>=0.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyrefly>=0.16.0",
    "pytest>=8.0",
    "vulture>=2.14",
    # Optional visualization
    "matplotlib>=3.8",
    "jupyterlab>=4.2.4",
]

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PLC0415",  # import-outside-top-level
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["twentyfortyeight", "reinforce"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyrefly]
project_includes = ["twentyfortyeight", "reinforce", "tests"]
python_version = "3.12"

[tool.hatch.build.targets.wheel]
packages = ["twentyfortyeight", "reinforce"]
